# jchannel

./: CMakeLists.txt  README  jchannel.pc  jchannel.pc.in
.github/workflows/: cmake.yml
include/jchannel/: jchannel.h  jchannel.h.01
tests/: CMakeLists.txt  blocking_test.cpp  close_test.cpp  ctor_test.cpp  empty_poll_test.cpp  fifo_test.cpp  fork_test.cpp  init_poll_test.cpp  interrupt_test.cpp  multi_poll_test.cpp  packet_data_test.cpp  packet_poll_test.cpp  sigpipe_test.cpp  stream_data_test.cpp  stream_poll_test.cpp  stress_test.cpp  unreaded_test.cpp
